--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300&display=swap" rel="stylesheet">
-    <title>Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
+
     <div class="card">
-        <img src="https://scontent.fgza2-3.fna.fbcdn.net/v/t39.30808-6/267607985_372956287964660_2876127440490393819_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=e3f864&_nc_ohc=wjZdIrorr2sAX_zE5gZ&_nc_ht=scontent.fgza2-3.fna&oh=00_AT9-fLiVFOezBBgbLJQTq0Ei9PrOaRv5T5OwNJyS0lJSsg&oe=61E9AA29" alt="">
+        <img src="https://scontent.fgza9-1.fna.fbcdn.net/v/t39.30808-6/p600x600/267607985_372956287964660_2876127440490393819_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=e3f864&_nc_ohc=wjZdIrorr2sAX8LGTOn&_nc_ht=scontent.fgza9-1.fna&oh=00_AT8S_m_b7XN3pFa3EPfrNgTYrjJuBF4YnJ-oBhKhmshA8w&oe=61EA4957"
+            alt="">
+
         <div class="bowl">
             <span>انمي ون بيس الحلقة 1007</span>
             <div class="watch">
                 <button>شاهد الان</button>
             </div>
         </div>
+
+
         <div class="btn">
-            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
-                <path fill="none" d="M0 0h48v48H0z" />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 101 101">
                 <path
-                    d="M20 33l12-9-12-9v18zm4-29C12.95 4 4 12.95 4 24s8.95 20 20 20 20-8.95 20-20S35.05 4 24 4zm0 36c-8.82 0-16-7.18-16-16S15.18 8 24 8s16 7.18 16 16-7.18 16-16 16z" />
+                    d="M50.5 84.6c18.8 0 34.1-15.3 34.1-34.1S69.3 16.4 50.5 16.4 16.4 31.7 16.4 50.5s15.3 34.1 34.1 34.1zm0-63.4c16.1 0 29.3 13.1 29.3 29.3S66.6 79.8 50.5 79.8 21.2 66.6 21.2 50.5s13.2-29.3 29.3-29.3z" />
+                <path
+                    d="M43.8 68c.3.1.6.2.9.2.6 0 1.2-.2 1.7-.7L61.9 52c.5-.4.7-1.1.7-1.7s-.3-1.2-.7-1.7L46.4 33.1c-.7-.7-1.7-.9-2.6-.5-.9.4-1.5 1.2-1.5 2.2v31c0 1 .6 1.9 1.5 2.2zm3.3-27.4l9.7 9.7-9.7 9.7V40.6z" />
             </svg>
         </div>
+
     </div>
+
+
+
+
 
 </body>
 
